# internal/domains/user/user_route.go
@@ -1,0 +1,7 @@
+package user
+
+import "github.com/gin-gonic/gin"
+
+func SetupUserRoutes(router *gin.RouterGroup, userController *UserController) {
+	router.GET("/api/v1/users", userController.GetUsers)
+}
